test_inputs/bad/undefined_field_type.lat
class A {
    B b;
}

int main() {
    return 0;
}
